--- a/app/src/main/res/layout/fragment_farolas.xml
+++ b/app/src/main/res/layout/fragment_farolas.xml
@@ -1,33 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/gris">
 
-    <!-- Contenedor de galería y selector de farolas -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Horizontal Chain for Spinner and Button -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical">
 
-            <!-- Spinner para seleccionar Farola -->
             <Spinner
                 android:id="@+id/farolaSpinner"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
+                android:layout_marginEnd="8dp"
                 android:minHeight="48dp" />
 
-            <!-- Botón de acción -->
             <Button
                 android:id="@+id/selectButton"
                 android:layout_width="wrap_content"
@@ -42,22 +39,31 @@
                 android:textColor="@android:color/white"
                 android:textSize="12dp"
                 android:textStyle="bold" />
-
         </LinearLayout>
 
-
-
-        <!-- ViewPager2 para galería de fotos -->
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/galleryViewPager"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_marginTop="8dp" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/galleryIndicator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignBottom="@id/galleryViewPager"
+            android:layout_marginTop="-60dp"
+            app:tabIndicator="@drawable/selector_tab_indicator"
+            app:tabGravity="center"
+            app:tabMode="scrollable"
+            app:tabPaddingStart="16dp"
+            app:tabPaddingEnd="16dp"
+            app:tabIndicatorHeight="0dp"
+            app:tabSelectedTextColor="@color/black"
+            app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Body2" />
     </LinearLayout>
 
-
-
-    <!-- Título para datos de sensores -->
     <TextView
         android:id="@+id/tv_welcome2"
         android:layout_width="wrap_content"
@@ -65,15 +71,12 @@
         android:textColor="#000000"
         android:text="Datos de la Farola:"
         android:textSize="18sp"
-        android:textStyle="normal"
         android:layout_marginTop="16dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:textAlignment="center"
         android:layout_marginLeft="10dp"
-        android:fontFamily="@font/comfortaa"/>
+        android:fontFamily="@font/comfortaa" />
 
-    <!-- RecyclerView para mostrar datos -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_weather"
         android:layout_width="match_parent"
@@ -82,5 +85,4 @@
         android:padding="8dp"
         android:clipToPadding="false"
         android:scrollbars="vertical" />
-
 </LinearLayout>
