--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -10,14 +10,14 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/baseline_home_24"
-        android:title="Home"
+        android:title="Inicio"
         android:checked="true"
         android:fontFamily="@font/comfortaa"/>
 
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/baseline_person_24"
-        android:title="Profile"
+        android:title="Perfil"
         android:fontFamily="@font/comfortaa"/>
 
 
