--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -13,14 +13,15 @@
         android:layout_height="match_parent">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="325dp"
-            android:layout_height="450dp"
+            android:id="@+id/cardView"
+            android:layout_width="333dp"
+            android:layout_height="464dp"
             android:layout_marginTop="16dp"
+            app:cardCornerRadius="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:cardCornerRadius="16dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -31,11 +32,24 @@
                 <!-- Botón de cancelar para el primer EditText -->
 
                 <!-- Botón de aceptar para el segundo EditText -->
+                <TextView
+                    android:id="@+id/textView12"
+                    android:layout_width="274dp"
+                    android:layout_height="69dp"
+                    android:text="Para ver sus datos acceda a su cuenta de Google"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <ImageButton
                     android:id="@+id/btnAccept1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="12dp"
+                    android:layout_marginEnd="10dp"
                     android:background="#00FFFFFF"
                     android:src="@drawable/baseline_check_24"
                     android:visibility="gone"
@@ -49,7 +63,7 @@
                     android:id="@+id/btnCancel1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="36dp"
+                    android:layout_marginEnd="38dp"
                     android:background="#00FFFFFF"
                     android:src="@drawable/baseline_close_24"
                     android:visibility="gone"
@@ -67,7 +81,7 @@
                     android:id="@+id/btnAccept2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="12dp"
+                    android:layout_marginEnd="10dp"
                     android:background="#00FFFFFF"
                     android:src="@drawable/baseline_check_24"
                     android:visibility="gone"
@@ -81,7 +95,7 @@
                     android:id="@+id/btnCancel2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="36dp"
+                    android:layout_marginEnd="38dp"
                     android:background="#00FFFFFF"
                     android:src="@drawable/baseline_close_24"
                     android:visibility="gone"
@@ -97,7 +111,7 @@
                     android:id="@+id/btnAccept3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="12dp"
+                    android:layout_marginEnd="10dp"
                     android:background="#00FFFFFF"
                     android:src="@drawable/baseline_check_24"
                     android:visibility="gone"
@@ -111,7 +125,7 @@
                     android:id="@+id/btnCancel3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="36dp"
+                    android:layout_marginEnd="38dp"
                     android:background="#00FFFFFF"
                     android:src="@drawable/baseline_close_24"
                     android:visibility="gone"
@@ -159,8 +173,8 @@
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Correo:"
                     android:fontFamily="@font/comfortaa"
+                    android:text="Correo:"
 
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -173,8 +187,8 @@
                     android:id="@+id/textView10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Contraseña:"
                     android:fontFamily="@font/comfortaa"
+                    android:text="Contraseña:"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.144"
@@ -186,8 +200,8 @@
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nombre:"
                     android:fontFamily="@font/comfortaa"
+                    android:text="Nombre:"
 
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -201,8 +215,8 @@
                     android:layout_width="250dp"
                     android:layout_height="35dp"
                     android:background="@drawable/boton_cerrarsesion"
-                    android:onClick="logout"
                     android:fontFamily="@font/comfortaa"
+                    android:onClick="logout"
                     android:text="Cerrar Sesión"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -216,10 +230,10 @@
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/comfortaa"
                     android:text="Mi Perfil"
                     android:textColor="#000000"
                     android:textSize="40sp"
-                    android:fontFamily="@font/comfortaa"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
